# protosept

./: .gitignore  BRANCHING_IMPLEMENTATION.md  Cargo.toml  EXCEPTION_HANDLING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  p7-language-spec.md  protosept-language-spec.md  protosept-language-spec.md.backup  test_simple_while.p7
examples/: control_flow_demo.p7  hello.p7  match_demo.p7
p7/: Cargo.toml  builtin.p7  std_ffi.p7
p7-cli/: Cargo.toml
p7-cli/src/: artifact.rs  dispatch.rs  main.rs  module_provider.rs  project.rs  repl.rs  test_harness.rs
p7-vscode/: .vscodeignore  language-configuration.json  package.json
specs/: embedding-api.md  language-gaps.md  native-extension-abi.md  p7-cli.md  package-project.md  protosept-language.md
src/: lexer.rs  lib.rs  main.rs  parser.rs  semantic.rs
std/: io.p7
test-runner/: Cargo.toml
tests/: effect.rs  lexer_test.rs  parser_test.rs  test.p7  test.p71  test2.p7  test3.p7  test_args_defaults.p7  test_args_defaults_compile_fail.p7  test_array_bytecode_check.p7  test_array_demo.p7  test_array_hof.p7  test_array_index_of.p7  test_array_negative_index_error.p7  test_array_negative_index_trap.p7  test_array_operations.p7  test_array_ops_simple.p7  test_array_out_of_bounds_error.p7  test_array_out_of_bounds_trap.p7  test_arrays.p7  test_arrays_comprehensive.p7  test_attributes.p7  test_attributes_comprehensive.p7  test_basic_operations.p7  test_bool_operators.p7  test_box.p7  test_box_error.p7  test_box_self.p7  test_cast_float_to_int_compile_fail.p7  test_cast_int_to_float.p7  test_closures.p7  (+167 more)
unp7/: Cargo.toml
(+131 files in other folders)
