[package]
name = "p7-cli"
version = "0.1.0"
edition = "2024"
default-run = "p7"
license = "MIT"

[[bin]]
name = "p7"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bincode = "1"
p7 = { path = "../p7" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.9"
unp7 = { path = "../unp7" }
